# f8-causal-cryptanalysis

./: .gitattributes  .gitignore  Brewfile  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PATENT_NOTICE.md  README.md  REPRODUCIBILITY.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
configs/: full.json  quick.json
docs/: CLAIM_LEDGER.md  FULLROUND_RECOVERY_COMPLETENESS_AUDIT.md  METHODS.md  PRESENTATION_SCOPE.md  PRIOR_ART.md  PUBLICATION_AUDIT.md  PUBLISH_GAP_AUDIT_A287_A325.md  RELEASE_A220B_A222_INFRA.md  RELEASE_A220P.md  RELEASE_A223_A277.md  RELEASE_A278_A286_RECORDS.md  RELEASE_A287_A325_CRYPTANALYSIS.md  RELEASE_A326_A456_FRONTIER.md  RELEASE_A326_A458_FRONTIER.md  REPRODUCIBILITY.md  RESULTS.md  SOURCE_INVENTORY.md
paper/: README.md
provenance/: SHA256SUMS  SOURCE_SNAPSHOT.md
provenance/fullround_anchors/f8/: .gitignore  README.md  pyproject.toml  reproduce.py
provenance/fullround_anchors/f8/experiments/: gift.py  present.py  rc5.py  rc5_64.py  reproduce_core.py  speck_variants.py  tea.py  threefish1024.py  threefish256.py
provenance/fullround_anchors/f8/figures/: make_figures.py
provenance/fullround_anchors/f8/results/: core_reproduction.json  gift.json  present.json  rc5.json  rc5_64.json  speck_variants.json  tea.json  threefish1024.json  threefish256.json
research/: ATTEMPT_LOG.md  ATTEMPT_LOG_A432_A456.md  CAUSAL_FORMAT_AUDIT.md  CODE_VERSION_LEDGER.md  README.md
scripts/: amend_chacha20_round20_w50_a427_packaging_v1.py  amend_chacha20_round20_w50_a428_causal_packaging_v1.py  check_publication.py  finalize_chacha20_round20_w50_a403_protocol.sh  finalize_chacha20_round20_w50_a404_leaveoneout.sh  finalize_chacha20_round20_w50_a405_protocol.sh  finalize_chacha20_round20_w50_a406_weighted.sh  finalize_chacha20_round20_w50_a407_protocol.sh  finalize_chacha20_round20_w50_a408_nested_fisher.sh  finalize_chacha20_round20_w50_a409_protocol.sh  finalize_chacha20_round20_w50_a410_nested_prototype.sh  finalize_chacha20_round20_w50_a411_protocol.sh  finalize_chacha20_round20_w50_knownkey_a401_a402.sh  generate_publication_figures.py  reproduce.sh  reproduce_a211_a220p.sh  reproduce_a223_a277.sh  reproduce_a278_a286_records.sh  reproduce_a287_a325.sh  reproduce_aes256_metal.sh  reproduce_ascon_aead128_metal_factory.sh  reproduce_blake3_keyed_metal.sh  reproduce_causal_mechanisms.sh  reproduce_chacha20_round20_capacity_moonshot_a223.sh  reproduce_chacha20_round20_cross_material_composite_recovery.sh  reproduce_chacha20_round20_cross_material_order.sh  reproduce_chacha20_round20_cross_reader_rank_overlay.sh  reproduce_chacha20_round20_cross_width_rank_velocity_a333.sh  (+209 more)
(+2609 files in other folders)
