[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx-carry-leak"
version = "0.2.0"
description = "F8-Causal reproducible full-round distinguishers, causal Readers, and cryptanalysis"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE", "PATENT_NOTICE.md", "THIRD_PARTY_NOTICES.md"]
authors = [
  {name = "David Tom Foss", email = "david@foss.com.de"},
]
keywords = ["cryptanalysis", "full-round", "causal reader", "ARX", "F8", "CASI", "Keccak", "reproducibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
]

[project.urls]
Homepage = "https://github.com/DT-Foss/f8-causal-cryptanalysis"
Repository = "https://github.com/DT-Foss/f8-causal-cryptanalysis"
Issues = "https://github.com/DT-Foss/f8-causal-cryptanalysis/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.5"]

[project.scripts]
arx-f8 = "arx_carry_leak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arx_carry_leak = ["live_casi_v091/LICENSE"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "provenance",
  "src/arx_carry_leak/live_casi_v091",
  "src/arx_carry_leak/nano_ciphers.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
