[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "f8"
version = "1.3.0"
description = "F8: full-round known-key cross-round distinguishers for Speck, Threefish-256, Threefish-1024, GIFT, PRESENT, TEA, and RC5 (32- and 64-bit) via mutual-information analysis"
authors = [{name = "David Tom Foss"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
figures = ["matplotlib>=3.5"]

[project.urls]
Repository = "https://github.com/DT-Foss/f8"

[tool.setuptools]
py-modules = ["reproduce"]

[tool.setuptools.packages.find]
where = ["."]
include = ["experiments*"]
